...
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/ll_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                    <plm.patientslikeme2.utils.usercontrol.UserTextView
                        android:id="@+id/tv_already_member"
                        style="@style/TextView13"
                        android:layout_width="wrap_content"
...

                <plm.patientslikeme2.utils.usercontrol.UserEditText
                    android:id="@+id/et_email"
                    style="@style/EditText"
                    android:layout_height="@dimen/_42dp"
...

                <plm.patientslikeme2.utils.usercontrol.UserTextView
                    android:id="@+id/tv_email_details"
                    style="@style/TextView13"
                    android:layout_marginHorizontal="@dimen/_30dp"
...

                <plm.patientslikeme2.utils.usercontrol.UserEditText
                    android:id="@+id/et_username"
                    style="@style/EditText"
                    android:layout_height="@dimen/_42dp"
...

                <plm.patientslikeme2.utils.usercontrol.UserTextView
                    android:id="@+id/tv_username_details"
                    style="@style/TextView13"
                    android:layout_marginHorizontal="@dimen/_30dp"
...

                    <plm.patientslikeme2.utils.usercontrol.UserEditText
                        android:id="@+id/et_password"
                        style="@style/EditText"
                        android:layout_height="@dimen/_42dp"
...

                    <ImageView
                        android:id="@+id/iv_visible_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                <plm.patientslikeme2.utils.usercontrol.UserTextView
                    android:id="@+id/tv_password_details"
                    style="@style/TextView13"
                    android:layout_marginHorizontal="@dimen/_30dp"
...

                        <plm.patientslikeme2.utils.usercontrol.UserTextView
                            android:id="@+id/tv_month"
                            style="@style/Spinner"
                            android:layout_height="@dimen/_42dp"
...

                        <plm.patientslikeme2.utils.usercontrol.UserTextView
                            android:id="@+id/tv_day"
                            style="@style/Spinner"
                            android:layout_height="@dimen/_42dp"
...

                        <plm.patientslikeme2.utils.usercontrol.UserTextView
                            android:id="@+id/tv_year"
                            style="@style/Spinner"
                            android:layout_height="@dimen/_42dp"
...

                <plm.patientslikeme2.utils.usercontrol.UserTextView
                    android:id="@+id/tv_dob_details"
                    style="@style/TextView13"
                    android:layout_marginHorizontal="@dimen/_30dp"
...

                <plm.patientslikeme2.utils.usercontrol.UserCheckBox
                    android:id="@+id/cb_joining_caregiver"
                    style="@style/Checkbox"
                    android:layout_marginHorizontal="@dimen/_20dp"
...

                <plm.patientslikeme2.utils.usercontrol.UserCheckBox
                    android:id="@+id/cb_terms_conditions"
                    style="@style/Checkbox"
                    android:layout_marginHorizontal="@dimen/_20dp"
...

                <plm.patientslikeme2.utils.usercontrol.UserButton
                    android:id="@+id/btn_back"
                    style="@style/ButtonDarkGreenBorder"
                    android:layout_width="wrap_content"
...

                <plm.patientslikeme2.utils.usercontrol.UserButton
                    android:id="@+id/btn_create_account"
                    style="@style/ButtonDarkGray"
                    android:layout_width="wrap_content"
...
