<resources>
    <string name="app_name">PatientsLikeMe</string>

    <!--Menu-->
    <string name="title_home">Home</string>
    <string name="title_community">Community</string>
    <string name="title_my_health">My Health</string>
    <string name="title_learning">Learning</string>
...
    <string name="nav_menu_help_center">Help center</string>
    <string name="nav_menu_privacy_policy">Privacy policy</string>
    <string name="nav_menu_terms_conditions">Terms &amp; conditions</string>
    <string name="nav_menu_logout">Log out</string>

    <string name="user_name_email">Username or email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="email_details">Your email address will not be shared with anyone</string>
    <string name="username">Username</string>
    <string name="username_details">This is visible to other PatientsLikeMe members. You may want to use an anonymous name.</string>
    <string name="incorrect_username_password">Incorrect username or password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="label">Label</string>
    <string name="dob_details">You must be over 13 to join. Your date of birth is only visible to other PatientsLikeMe community members.</string>
    <string name="joining_as_caregiver">I am joining as a caregiver for someone else.</string>
    <string name="plm_terms_conditions">I agree to the PatientsLikeMe terms &amp; conditions of use and privacy policy</string>
    <string name="add_your_conditions">Add your conditions</string>
    <string name="required">required</string>
    <string name="required_bracket">(required)</string>
    <string name="optional_bracket">(optional)</string>
    <string name="adding_conditions_details">Adding conditions enables PatientsLikeMe to personalize your site experience and provide relevant information to help you take charge of your health.</string>
...
    <string name="profile_headline">Profile headline</string>
    <string name="hint_profile_headline">Add a brief bio to introduce yourself to the community.</string>
    <string name="zero_sixty_characters">0/160 characters</string>
    <string name="profile_photo">Profile photo</string>
    <string name="profile_theme_color">Profile theme color</string>
    <string name="change_photo">Change photo</string>
    <string name="create_an_account">Create an account</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_details">Please enter the email address you used when you joined. We’ll send you instructions to reset your password.</string>
    <string name="already_member_sign">Already a member? Sign in</string>
    <string name="already_member">Already a member?</string>
    <string name="fail_to_delete_condition">Failed to delete condition</string>

    <string name="looking_for_group">Looking for a specific group?</string>
    <string name="looking_for_group_hint">Start typing to see suggestions</string>
    <string name="all_groups">All groups</string>
...
    <string name="data_information_sharing">Data and information sharing preferences (social contract)</string>
    <string name="while_plm_believes_power">While PatientsLikeMe believes in the power of sharing health data, we want to give you control on what data is shared. Please keep in mind that any information that you enter on the platform may be used by PatientsLikeMe and its Partners in a way that does not identify you so we can provide the aggregate insights that help the Community heal together, ge
    <string name="want_my_data_visible_non_members">I want my data to be visible to non-members.</string>
    <string name="want_my_data_visible_members_only">I want my data to be visible to PatientsLikeMe community members only. (default).</string>
    <string name="want_control_what_data_shared">I want to control what data is shared.</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="post">Post</string>
    <string name="close">close</string>
    <string name="edit">Edit</string>
...
    <string name="privacy_settings_for_conditionname">Privacy settings </string>
    <string name="add_symptoms">Add symptoms</string>
    <string name="of_chronic_kidney_disease">of Chronic kidney disease</string>
    <string name="common_symptoms">Common symptoms</string>
    <string name="chronic_kidney_disease">Chronic kidney disease</string>
    <string name="remove">Remove</string>
    <string name="ok">OK</string>
    <string name="diabetes_type_2">Diabetes type 2</string>
    <string name="other_treatments">Other treatments</string>
    <string name="add_a_treatment">Add a treatment</string>
    <string name="edit_treatment">Edit treatment</string>
    <string name="edit_condition">Edit condition</string>
    <string name="treatment_name">Treatment name</string>
...
